# arm_ros2

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: config.yaml
docs/: ClassDiagram.puml  config.md
include/arm_ros2/: cli.hpp  config.hpp  utility.hpp
include/arm_ros2/config/: gripper.hpp  joint.hpp
include/arm_ros2/config/joint/: angle.hpp  coordinate.hpp  max_angle.hpp  position.hpp
include/arm_ros2/ros/: node.hpp
include/arm_ros2/ros/action/: ArmControl.action
include/arm_ros2/ros/node/: arm.hpp  joint.hpp
scripts/: format.sh
src/: CMakeLists.txt  cli.cpp  config.cpp  main.cpp
src/ros/: node.cpp
src/ros/node/: arm.cpp
